# Pearson-active-learn-book-downloader

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
pearson active book downloader/: main.py
